--- a/src/style/myStyle.scss
+++ b/src/style/myStyle.scss
@@ -1,3 +1,5 @@
+/**将fonts文件下面的.ttf文件上传至http://www.font2web.com/，生成新的字体文件*/
+/** https://transfonter.org/ 转字体网站*/
 html,body,#root{
   width: 100%;
   height: 100%;
